Minor demo fixes